myteo/test/analyze/type_check/type_parameters/basic.exp
Error: Expected type `T` but found `Int`
test/analyze/type_check/type_parameters/basic.myte:8:21
 8 | fun t3<T>(x: T): T = 1
   |                      ^

Error: Expected type `Int` but found `T`
test/analyze/type_check/type_parameters/basic.myte:10:3
 10 |   (x: Int);
    |    ^

Error: Expected type `T` but found `U`
test/analyze/type_check/type_parameters/basic.myte:14:38
 14 | fun t5<T, U>(x: T, y: U): Bool = x == y
    |                                       ^